[package]
name = "labby"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["webp"] }
rand = "0.8.5"
ndarray = "0.15.6"
once_cell = "1.19.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# For releases, long build times for better size and performance
[profile.release]
lto = 'thin'
codegen-units = 1
